--- a/pdf.html
+++ b/pdf.html
@@ -37,7 +37,7 @@
 
 <div class="content">
     <p>使用条款</p>
-    <p>我们的应用程序是提供给用户扫描识别PDF文档和文字识别,当您的可用次数为0的时候，无法正确的识别物体，请购买识别次数或者升级专业版。升级专业版的正常情况下是永久可使用的，但是当由于不可抗拒的因素导致应用被下架或者无法在提供给用户正确识别物体的时候，本应用及开发者不承担任何责任，也不提供退款服务，退款请到苹果商店申请退款。</p>
+    <p>我们的应用程序是提供给用户扫描识别PDF文档和文字识别,当您的可用次数为0的时候，无法正确的扫描识别PDF文档和图片，请购买识别次数或者升级专业版。升级专业版的正常情况下是永久可使用的，但是当由于不可抗拒的因素导致应用被下架或者无法在提供给用户正确识别PDF文档和图片的时候，本应用及开发者不承担任何责任，也不提供退款服务，退款请到苹果商店申请退款。</p>
     <p>本应用提供的扫描识别文字和PDF文档的功能，请检查和确认您拍照和识别的内容符合当地法律法规，您使用本应用即代表知悉我们以上的使用条款，并自愿承担由不当使用带来的一切风险和责任，本应用及开发者不承担任何责任。</p>
 </div>
 
