--- a/policy.html
+++ b/policy.html
@@ -70,7 +70,12 @@
 <p class="p2"><span class="s3">(2)</span><span class="s1">本软件开发者保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本软件开发者会通过网站通知的形式告知。</span></p>
 <p class="p2"><span class="s3">(3)</span><span class="s1">方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。</span></p>
 <p class="p2"><span class="s1">八</span><span class="s3"> </span><span class="s1">面部数据会与任何第三方共享吗？</span><span class="s3">-</span><span class="s1">人脸数据将存储在哪里？</span></p>
-<p class="p2"><span class="s1">面部数据不会和任何第三方共享；人脸数据均存储于百度云，本技术由百度云提供：具体可参考:https://ai.baidu.com/tech/face/merge</span></p>
+<p class="p2"><span class="s1">面部数据不会和任何第三方共享；人脸数据均存储于百度云，本技术由百度云提供。</span></p>
+<p class="p2"><span class="s1">具体可参考:</span></p>
+<p class="p2"><span class="s1">人脸融合: https://ai.baidu.com/tech/face/merge</span></p>
+<p class="p2"><span class="s1">人脸编辑：https://ai.baidu.com/tech/face/editattr </span></p>
+<p class="p2"><span class="s1">人脸动漫化：https://ai.baidu.com/tech/imageprocess/selfie_anime</span></p>
+<p class="p2"><span class="s1">人脸抠图（人脸分割）：https://ai.baidu.com/tech/body/seg</span></p>
 <p class="p3"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">--------------------------</span><span class="s2">用户服务协议</span><span class="s1">---------------------------------</span></p>
 <p class="p2"><span class="s1">用户服务协议</span></p>
