--- a/policy.html
+++ b/policy.html
@@ -280,6 +280,8 @@
 <p class="p2"><span class="s3">(3)</span><span class="s1">软件开发者有权依据国家政策、技术条件、产品功能等变化需要而进行修改本协议</span><span class="s3">,</span><span class="s1">软件开发者会将修改后的协议予以发布。前述内容一经正式发布</span><span class="s3">,</span><span class="s1">软件开发者将以适当的方式</span><span class="s3">(</span><span class="s1">系统通知等</span><span class="s3">)</span><span class="s1">提醒您更新的内容</span><span class="s3">,</span><span class="s1">以便您及时了解本协议的最新版本。修改后的内容将构成本协议不可分割的组成部分</span><span class="s3">,</span><span class="s1">您应同样遵守。您对修改后的协议有异议的</span><span class="s3">,</span><span class="s1">请立即停止登录、使用</span><span class="s3">“AI</span><span class="s1">变脸</span><span class="s3">”</span><span class="s1">软件及相关服务</span><span class="s3">,</span><span class="s1">若您登录或继续使用</span><span class="s3">“AI</span><span class="s1">变脸</span><span class="s3">”</span><span class="s1">软件及相关服务</span><span class="s3">,</span><span class="s1">视为认可修改后的协议。</span></p>
 <p class="p2"><span class="s3">(4)</span><span class="s1">本协议中的标题仅为方便及阅读而设</span><span class="s3">,</span><span class="s1">并不影响本协议中任何规定的含义或解释。</span></p>
 <p class="p2"><span class="s3">(5)</span><span class="s1">您和软件开发者均是独立的主体</span><span class="s3">,</span><span class="s1">在任何情况下本协议不构成软件开发者对用户的任何形式的明示或暗示担保或条件</span><span class="s3">,</span><span class="s1">双方之间亦不构成代理、合伙、合营或雇佣关系。</span></p>
-<p class="p4"><span class="s3">(6)</span><span class="s1">本协议的版权为软件开发者所有</span><span class="s3">,</span><span class="s1">在法律允许的范围内</span><span class="s3">,</span><span class="s1">软件开发者保留一切解释和修改的权利</span></p>
+<p class="p4"><span class="s3">(6)</span><span class="s1">本协议的版权为软件开发者所有</span><span class="s3">,</span><span class="s1">在法律允许的范围内</span><span class="s3">,</span><span class="s1">软件开发者保留一切解释和修改的权利。</span></p>
+</br>
+</br>
 </body>
 </html>
